--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,400&display=swap');
-
-* {
+*{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -17,39 +16,41 @@
     --bg-color: #fff;
 }
 
+
 ::selection {
     color: var(--bg-color);
     background: var(--second-color);
 }
 
-a {
+
+a{
     text-decoration: none;
 }
 
-li {
+li{
     list-style: none;
 }
 
-img {
+img{
     width: 100%;
 }
 
-section {
+section{
     padding: 3rem 0 2rem;
 }
 
-.container {
+.container{
     max-width: 1068px;
     margin: auto;
     width: 100%;
 }
 
-a {
+a{
     color: #fff;
 }
 
 /* Header */
-header {
+header{
     position: fixed;
     top: 0;
     left: 0;
@@ -57,30 +58,30 @@ header {
     z-index: 200;
 }
 
-header.shadow {
+header.shadow{
     background: var(--bg-color);
     box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
     transition: .5s;
 }
 
-header.shadow .logo {
+header.shadow .logo{
     color: var(--text-color);
 }
 
-.nav {
+.nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 18px 0;
 }
 
-.logo {
+.logo{
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--bg-color);
 }
 
-.logo span {
+.logo span{
     color: var(--second-color);
 }
 
@@ -98,7 +99,8 @@ header.shadow .logo {
     transition: .5s;
 }
 
-.home {
+
+.home{
     width: 100%;
     min-height: 440px;
     background: url("banner2.png");
@@ -107,28 +109,21 @@ header.shadow .logo {
     align-items: center;
 }
 
-.home-text {
+.home-text{
     color: var(--bg-color);
     text-align: center;
 }
 
-.home-title {
+.home-title{
     font-size: 3.5rem;
 }
 
-.home-subtitle {
+.home-subtitle{
     font-size: 1rem;
     font-weight: 400;
-    display: inline-block; /* Assure que le sous-titre est inline-block pour l'animation de largeur */
-    overflow: hidden; /* Masque le texte qui dépasse */
-    white-space: nowrap; /* Garde le texte sur une ligne */
-    border-right: 2px solid black; /* Effet curseur */
-    animation: 
-        typewriter 4s steps(30, end) 1s 1 normal both, 
-        blink 500ms steps(30, end) infinite;
 }
 
-.about {
+.about{
     position: relative;
     width: 100%;
     display: flex !important;
@@ -136,33 +131,33 @@ header.shadow .logo {
     align-items: center;
 }
 
-.about .contentBx {
+.about .contentBx{
     max-width: 50%;
     width: 50%;
     text-align: left;
     padding-right: 40px;
 }
 
-.titleText {
+.titleText{
     font-weight: 600;
     color: #111;
     font-size: 2rem;
     margin-bottom: 10px;
 }
 
-.title-text {
+.title-text{
     color: #111;
     font-size: 1em;
 }
 
-.about .imgBx {
+.about .imgBx{
     position: relative;
     min-width: 50%;
     width: 50%;
     min-height: 500px;
 }
 
-.btn2 {
+.btn2{
     position: relative;
     display: inline-block;
     margin-top: 30px;
@@ -180,7 +175,8 @@ header.shadow .logo {
     color: #fff;
 }
 
-.post-filter {
+
+.post-filter{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,34 +184,34 @@ header.shadow .logo {
     margin-top: 2rem !important;
 }
 
-.filter-item {
+.filter-item{
     font-size: 0.9rem;
     font-weight: 500;
     cursor: pointer;
 }
 
-.active-filter {
+.active-filter{
     background: var(--second-color);
     color: var(--bg-color);
     padding: 4px 10px;
     border-radius: 4px;
 }
 
-.post {
+.post{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, auto));
     justify-content: center;
     gap: 1.5rem;
 }
 
-.post-box {
+.post-box{
     background: var(--bg-color);
     box-shadow: 0 4px 14px hsl(35deg 25% 15% / 10%);
     padding: 15px;
     border-radius: 0.5rem;
 }
 
-.post-img {
+.post-img{
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -230,7 +226,8 @@ header.shadow .logo {
     color: var(--second-color);
 }
 
-.post-title {
+
+.post-title{
     font-size: 1.3rem;
     font-weight: 600;
     color: var(--second-color);
@@ -238,11 +235,9 @@ header.shadow .logo {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    transition: color 0.3s, text-decoration 0.3s;
-    text-decoration: underline;
 }
 
-.post-date {
+.post-date{
     display: flex;
     font-size: 0.875rem;
     text-transform: uppercase;
@@ -250,7 +245,7 @@ header.shadow .logo {
     font-weight: 400;
 }
 
-.post-description {
+.post-description{
     font-size: 0.9rem;
     line-height: 1.5rem;
     margin: 5px 0 10px;
@@ -260,13 +255,13 @@ header.shadow .logo {
     overflow: hidden;
 }
 
-.profile {
+.profile{
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.profile-img {
+.profile-img{
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -275,12 +270,12 @@ header.shadow .logo {
     border: 2px solid var(--second-color);
 }
 
-.profile-name {
+.profile-name{
     font-size: .8rem;
     font-weight: 500;
 }
 
-footer {
+footer{
     position: relative;
     width: 100%;
     height: auto;
@@ -292,22 +287,22 @@ footer {
     justify-content: space-between;
 }
 
-.footer-container {
+.footer-container{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
 }
 
-.footer-container .sec {
+.footer-container .sec{
     margin-right: 30px;
 }
 
-.footer-container .sec.aboutus {
+.footer-container .sec.aboutus{
     width: 40%;
 }
 
-.footer-container h2 {
+.footer-container h2{
     position: relative;
     color: #fff;
     margin-bottom: 15px;
@@ -323,20 +318,21 @@ footer .footer-container h2::before {
     background: var(--second-color);
 }
 
-footer p {
+
+footer p{
     color: #fff;
 }
 
-.sci {
+.sci{
     margin: 20px;
     display: flex;
 }
 
-.sci li {
+.sci li{
     list-style: none;
 }
 
-.sci li a {
+.sci li a{
     display: inline-block;
     width: 40px;
     height: 40px;
@@ -354,21 +350,22 @@ footer p {
     background: var(--second-color);
 }
 
-.sci i a .bx {
+
+.sci i a .bx{
     color: #fff;
     font-size: 20px;
 }
 
-.quicklinks {
+.quicklinks{
     position: relative;
     width: 25%;
 }
 
-.quicklinks ul li {
+.quicklinks ul li{
     list-style: none;
 }
 
-.quicklinks ul li a {
+.quicklinks ul li a{
     color: #999;
     text-decoration: none;
     margin-bottom: 10px;
@@ -376,46 +373,252 @@ footer p {
     transition: .3s;
 }
 
-.quicklinks ul li a:hover {
+.quicklinks ul li a:hover{
     color: #fff;
 }
 
-.footer-container .contactBx {
+.footer-container .contactBx{
     width: calc(35% - 60px);
     margin-right: 0 !important;
 }
 
-.contactBx .info {
+.contactBx .info{
     position: relative;
 }
 
-.contactBx .info li {
+.contactBx .info li{
     display: flex !important;
     margin-bottom: 16px;
 }
 
-.contactBx .info li i {
-    font-size: 18px;
-    margin-right: 15px;
-    color: var(--second-color);
+.contactBx .info li span:nth-child(1){
+    color: #fff;
+    font-size: 20px;
+    margin-right: 10px;
 }
 
-.contactBx .info li span {
-    color: #d9d9d9;
+.contactBx .info li span{
+    color: #999;
 }
 
-.contactBx .info li span a {
-    color: #d9d9d9;
+.contactBx .info li a{
+    color: #999;
+    text-decoration: none;
+    transition: .5s;
 }
 
-.contactBx .info li span a:hover {
+.contactBx .info li a:hover{
     color: #fff;
 }
 
-.contactBx .info li span a:visited {
-    color: #d9d9d9;
+@media (max-width: 1060px){
+    .container{
+        margin: 0 auto;
+        width: 95%;
+    }
+
+    .home-text{
+        width: 100%
+    }
 }
 
+@media (max-width: 768px){
+    .nav{
+        padding: 10px 0;
+    }
+
+    section{
+        padding: 2rem 0 !important;
+    }
+
+    .header-content{
+        margin-top: 3rem !important;
+    }
+
+    .home{
+        min-height: 380px;
+    }
+
+    .home-title{
+        font-size: 3rem;
+    }
+
+    .header-title{
+        font-size: 2rem;
+    }
+
+    .header-img{
+        height: 370px;
+    }
+
+    .about{
+        flex-direction: column;
+    }
+
+    .about .contentBx{
+        min-width: 100%;
+        width: 100%;
+        text-align: center;
+        padding-right: 0px;
+    }
+
+    .about .contentBx,
+    .about .imgBx{
+        min-width: 100%;
+        width: 100%;
+        padding-right: 0px;
+        text-align: center;
+    }
+
+    .about .imgBx{
+        min-height: 250px;
+    }
+
+    .btn2{
+        margin-bottom: 30px;
+    }
+
+    .post-header{
+        height: 435px;
+    }
+
+    .post-header{
+        margin-top: 9rem !important;
+    }
+}
+
+@media (max-width: 570px){
+    .post-header{
+        height: 390px;
+    }
+
+    .header-title{
+        width: 100%;
+    }
+
+    .header-img{
+        height: 340px;
+    }
+}
+
+@media (max-width: 396px){
+    .home-title{
+        font-size: 2rem;
+    }
+
+    .home-subtitle{
+        font-size: 0.9rem;
+    }
+
+    .home{
+        min-height: 300px;
+    }
+
+    .post-box{
+        padding: 10px;
+    }
+
+    .header-title{
+        font-size: 1.4rem;
+    }
+
+    .header-img{
+        height: 240px;
+    }
+
+    .post-header{
+        height: 335px;
+    }
+
+    .header-img{
+        height: 340px;
+    }
+}
+
+/* Footer Media Query */
+@media (max-width: 991px){
+    footer{
+        padding: 40px;
+        font-size: 20px;
+    }
+
+    footer .footer-container{
+        flex-direction: column;
+    }
+
+    footer .footer-container .sec{
+        margin-right: 0;
+        margin-bottom: 40px;
+    }
+
+    footer .footer-container .sec.aboutus{
+        width: 100% !important;
+    }
+
+    footer .footer-container .quicklinks{
+        width: 100%;
+    }
+
+    footer .footer-container .contactBx{
+        width: 100%;
+    }
+}
+
+/* Define the typewriter effect */
+@keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+}
+
+/* Define the blink effect for cursor */
+@keyframes blink {
+    0% { border-right: 2px solid transparent; }
+    100% { border-right: 2px solid black; }
+}
+
+/* Apply typewriter effect to the subtitle */
+.home-subtitle {
+    display: inline-block; /* Ensure subtitle is inline-block for width animation */
+    overflow: hidden; /* Hide the text that overflows */
+    white-space: nowrap; /* Keep the text on one line */
+    border-right: 2px solid black; /* Cursor effect */
+    animation: 
+        typewriter 4s steps(30, end) 1s 1 normal both, 
+        blink 500ms steps(30, end) infinite;
+}
+
+
+.post-title {
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: var(--second-color);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    transition: color 0.3s, text-decoration 0.3s;
+    text-decoration: underline;
+}
+
+/* Social Share Button */
+.share-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: var(--second-color);
+    color: var(--bg-color);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.share-btn:hover {
+    background: rgba(255, 77, 77, 1);
+}
+
+.share-btn i {
+    margin-right: 5px;
+}
 /* Contactez-nous Section */
 .contact {
     width: 100%;
@@ -423,7 +626,7 @@ footer p {
     background: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+margin-top: 20px;
 }
 
 .contact .titleText {
@@ -726,15 +929,7 @@ footer p {
 }
 
 
-/* Animation de la machine à écrire */
-@keyframes typewriter {
-    from { width: 0; }
-    to { width: 100%; }
-}
 
-@keyframes blink {
-    50% { border-color: transparent; }
-}
 /* Social Share Button */
 .share-btn {
     display: inline-block;
@@ -872,4 +1067,44 @@ header {
     .footer-container {
         flex-direction: column;
     }
+}
+
+.carousel {
+    position: relative;
+    overflow: hidden;
+}
+
+.carousel-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.carousel-images {
+    display: flex;
+    transition: transform 0.3s ease;
+}
+
+.carousel-images img {
+    max-width: 100%;
+    display: block;
+}
+
+.carousel-control {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    color: white;
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel-control.left {
+    left: 0;
+}
+
+.carousel-control.right {
+    right: 0;
 }
